<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Comics App</string>
    <string name="initial_comic_name">Current Comic</string> <!-- Should never be seen -->
    <string name="lbl_previous">Previous</string>
    <string name="lbl_next">Next</string>
    <string name="open_drawer">Open Comics List</string>
    <string name="close_drawer">Close Comics List</string>
    <string name="reload">Reload</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="download">Download new comics list&#8230;</string>
    <string name="in_progress">Downloading latest list</string>
    <string name="http_error">Download failed with HTTP Error code %1$d</string>
    <string name="http_exception">Download failed with exception %1$s</string>
    <string name="http_not_found">Comics list not found on server</string>
    <string name="url">Comics URL</string>
    <string name="url_hint">URL</string>
    <string name="cleardata">Clear downloaded data</string>
    <string name="pref_nogestures">Enable gesture page change</string>
    <string name="settings">Settings</string>
</resources>