<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/menu_reload" android:icon="@drawable/ic_action_refresh" android:title="@string/reload"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_cancel" android:icon="@drawable/ic_action_cancel" 
        android:title="@string/cancel" android:showAsAction="ifRoom" />

    <item android:id="@+id/menu_share" android:showAsAction="ifRoom" android:title="@string/share" 
        android:actionProviderClass="android.widget.ShareActionProvider" 
        android:icon="@android:drawable/ic_menu_share"
        />
    
    <item android:id="@+id/menu_browser" android:title="@string/open_in_browser" />
    
    <item android:id="@+id/download" android:title="@string/download" />
    
    <item android:id="@+id/cleardata" android:title="@string/cleardata" />
</menu>